# Particle

./: CMakeLists.txt
examples/minimal/: main.cpp
include/particle/: AngularVelocityModule.hpp  BlendMode.hpp  ColorFadeModule.hpp  Emitter.hpp  GLRenderer.hpp  GravityModule.hpp  IEmitter.hpp  IModule.hpp  IParticle.hpp  IRenderer.hpp  NoiseModule .hpp  Particle.hpp  SizeModule.hpp  SpriteRenderer.hpp  ValueOverLifeModule.hpp
include/particle/shape/: BoxShape.hpp  CircleShape.hpp  IEmitterShape.hpp  PointShape.hpp
include/particle/spawn/: BurstSpawnStrategy.hpp  ISpawnStrategy.hpp  RateSpawnStrategy.hpp
src/particles/: Emitter.cpp  GLRenderer.cpp  Particle.cpp  SpriteRenderer.cpp
src/shape/: BoxShape.cpp  CircleShape.cpp
src/spawn/: BurstSpawnStrategy.cpp  RateSpawnStrategy.cpp
